# Heliora

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  test.cpp
Resources/Scenes/: 01_sponza.scene  02_sponza_dynamic.scene
Resources/Textures/Concrete007/: Concrete007_1K-JPG.blend  Concrete007_1K-JPG.mtlx  Concrete007_1K-JPG.tres  Concrete007_1K-JPG.usdc
Shaders/: bloom_downsample.comp  bloom_downsample.comp.spv  bloom_upsample.comp  bloom_upsample.comp.spv  compile_shaders.sh  deferred.frag  deferred.frag.spv  exposure.comp  exposure.comp.spv  gpu_cull.comp  gpu_cull.comp.spv  histogram.comp  histogram.comp.spv  hzb_downsample.comp  hzb_downsample.comp.spv  irradiance.comp  irradiance.comp.spv  lit.frag  lit.frag.spv  material_probe.comp  material_probe.comp.spv  prefilter.comp  prefilter.comp.spv  second.frag  second.frag.spv  second.vert  second.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader_gpu.frag  shader_gpu.frag.spv  shader_gpu.vert  shader_gpu.vert.spv  shader_instanced.vert  shader_instanced.vert.spv  shadow.frag  shadow.frag.spv  shadow.vert  (+13 more)
docs/: VulkanStandards.md
include/: AutoExposurePass.h  BloomPass.h  Camera.h  CompositePass.h  DescriptorManager.h  GpuDrivenGBufferPass.h  ImGuiLayer.h  InputManager.h  Material.h  MaterialProbePass.h  Mesh.h  MeshModel.h  Model.h  ModelManager.h  PerformanceMetrics.h  RenderPassManager.h  RenderResources.h  Scene.h  SceneNode.h  ShadowPass.h  SsaoPass.h  SsgiPass.h  TextureManager.h  Utilities.h  VulkanDebug.h  VulkanDevice.h  VulkanPipeline.h  VulkanPipelineCache.h  VulkanRenderer.h  VulkanSwapchain.h  VulkanSync.h
src/: AutoExposurePass.cpp  BloomPass.cpp  Camera.cpp  CompositePass.cpp  DescriptorManager.cpp  GpuDrivenGBufferPass.cpp  ImGuiLayer.cpp  InputManager.cpp  MaterialProbePass.cpp  Mesh.cpp  MeshModel.cpp  Model.cpp  ModelManager.cpp  PerformanceMetrics.cpp  RenderPassManager.cpp  RenderResources.cpp  Scene.cpp  SceneNode.cpp  ShadowPass.cpp  SsaoPass.cpp  SsgiPass.cpp  TextureManager.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanPipelineCache.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp  main.cpp
